tests/fixtures/fail/where_unknown_associated_type.sc
let Marker = trait {}

let identity(T: type)(value: T): T
where T: Marker(Item = T) = value

let main(): i32 = identity(42)
